--- a/4 Nested and functional components/index.html
+++ b/4 Nested and functional components/index.html
@@ -9,6 +9,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
